<resources>
    <!-- Application Name-->
    <string name="app_name">さかテル</string>

    <!-- Activity Strings -->
    <string name="close">閉じる</string>
    <string name="back_text">戻る</string>
    <string name="cocktailList_text">カクテル一覧</string>
    <string name="adMob_text">広告</string>
    <string name="menu_text">メニュー</string>
    <string name="productToCocktail_text">材料からカクテルを探す</string>
    <string name="productList_text">材料一覧</string>
    <string name="productToCocktailDescription_text">持っている材料から作れるカクテルの一覧</string>
    <string name="productRegist_text">材料登録</string>
    <string name="save_text">保存</string>
    <string name="ProductName_text">製品名</string>
    <string name="recipe_text">レシピ</string>
    <string name="detail_text">詳細</string>
    <string name="photo_URL">img/</string>
    <string name="Have_text">ある</string>
    <string name="DoNotHave_text">ない</string>
    <string name="logo_text">Logo</string>
    <string name="version_text">version : </string>
    <string name="product_text">材料</string>
    <string name="Methods_text">製法</string>
    <string name="Grass_text">グラス</string>
    <string name="AlcoholDegree_text">アルコール度数</string>
    <string name="HowTo_text">作り方</string>
    <string name="JapaneseSyllabary_text">五十音</string>
    <string name="Base_text">ベース</string>
    <string name="All_text">全て</string>
    <string name="favorite_text">お気に入り</string>
    <string name="Photo_text">写真</string>
    <string name="Maker_text">製造/販売会社</string>
    <string name="Category_text">カテゴリ</string>
    <string name="Hold_text">持っている</string>
    <string name="itemCaption_text">商品説明</string>
    <string name="showName_text">店舗名</string>
    <string name="RakutenShop">この商品を楽天で購入する</string>
    <string name="Acquiring">取得中</string>
    <string name="Search">検索</string>
    <string name="FilterSettings">フィルタ設定</string>


    <string name="NoImage_URL">noimage.jpg</string>
    <string name="NoThumbnail_URL">nothumbnail.jpg</string>

    <string name="TAG_ProductID_Key">1</string>
    <string name="TAG_MaterialID_Key">2</string>
    <string name="TAG_CocktailID_Key">3</string>
    <string name="TAG_AffiliateUrl_Key">4</string>

    <!-- Error Messages -->
    <string name="ERR_VolleyTitle_text">通信エラー</string>
    <string name="ERR_VolleyMessage_text">サーバーとの通信に失敗しました。\n通信状態を確認してください。</string>
    <string name="ERR_DownloadCategoryFailure">カテゴリの取得に失敗しました。</string>
    <string name="ERR_InsertFavoriteFailure">お気に入りの登録に失敗しました。</string>
    <string name="ERR_DeleteFavoriteFailure">お気に入りの削除に失敗しました。</string>
    <string name="ERR_ItemNotFound">商品が見つかりませんでした。</string>
</resources>
