<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.ecweb.homes.a1601.activities.CocktailListActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/baseLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/bodyLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:text="@string/cocktailList_text"
                android:id="@+id/textView"
                android:paddingBottom="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/All_text"
                        android:id="@+id/AllButton"
                        android:background="@android:color/transparent"
                        android:textColor="@color/Blue"
                        android:onClick="onAllButtonTapped"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/JapaneseSyllabary_text"
                        android:id="@+id/JapaneseSyllabaryButton"
                        android:background="@android:color/transparent"
                        android:textColor="@color/Blue"
                        android:onClick="onJapaneseSyllabaryButtonTapped"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/Base_text"
                        android:id="@+id/BaseButton"
                        android:background="@android:color/transparent"
                        android:textColor="@color/Blue"
                        android:onClick="onBaseButtonTapped"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:text="@string/favorite_text"
                        android:id="@+id/favoriteButton"
                        android:background="@android:color/transparent"
                        android:textColor="@color/Blue"
                        android:onClick="onFavoriteButtonTapped"/>
                </LinearLayout>

            </LinearLayout>

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:fastScrollAlwaysVisible="false"
                android:fastScrollEnabled="true"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/adLayout">

            <com.google.android.gms.ads.AdView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/adView"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
