<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="jp.ecweb.homes.a1601.activities.MainActivity"
                android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/baseLayout">

        <LinearLayout
            android:id="@+id/bodyLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/versionNameText"
                android:text="Small Text"
                android:gravity="bottom|right"
                android:layout_gravity="right"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LogoImage"
                android:src="@drawable/logo"
                android:scaleType="centerInside"
                android:contentDescription="@string/logo_text"/>

            <Button
                android:id="@+id/materialToCocktailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onMaterialToCocktailButtonTapped"
                android:text="@string/productToCocktail_text"
                android:textColor="@color/Blue"
                android:textSize="18sp"
                android:background="@android:color/transparent"
                />

            <Button
                android:id="@+id/cocktailListButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCocktailListButton"
                android:text="@string/cocktailList_text"
                android:textColor="@color/Blue"
                android:textSize="18sp"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="right"
            >

            <WebView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RakutenCreditView"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/adLayout">

            <com.google.android.gms.ads.AdView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adView"
                android:layout_gravity="center_horizontal"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
